--- a/source/manifest.json
+++ b/source/manifest.json
@@ -1,5 +1,5 @@
 {
-	"name": "Awesome Extension",
+	"name": "My Awesome Extension",
 	"version": "0.0.0",
 	"description": "An awesome new browser extension",
 	"homepage_url": "https://github.com/fregante/browser-extension-template",
@@ -18,11 +18,13 @@
 		"storage"
 	],
 	"host_permissions": [
-		"https://github.com/*"
+		"<all_urls>"
 	],
 	"content_scripts": [
 		{
-			"matches": [ "https://github.com/fregante/browser-extension-template/*" ],
+			"matches": [ 
+				"<all_urls>"
+		 	],
 			"js": [ "content.js" ],
 			"css": [ "content.css" ],
 			"run_at": "document_end"
