--- a/source/manifest.json
+++ b/source/manifest.json
@@ -1,6 +1,6 @@
 {
 	"name": "My Awesome Extension",
-	"version": "0.0.0",
+	"version": "1.0.0",
 	"description": "An awesome new browser extension",
 	"homepage_url": "https://github.com/fregante/browser-extension-template",
 	"manifest_version": 3,
@@ -15,19 +15,23 @@
 		"128": "icon.png"
 	},
 	"permissions": [
-		"storage"
+		"storage",
+		"activeTab",
+		"scripting"
 	],
-	"host_permissions": [
-		"<all_urls>"
-	],
+	
+	"action": {
+		"default_icon": {
+			"128": "icon.png"
+		}
+	},
 	"content_scripts": [
+		
+	],
+	"web_accessible_resources": [
 		{
-			"matches": [ 
-				"<all_urls>"
-		 	],
-			"js": [ "content.js" ],
-			"css": [ "content.css" ],
-			"run_at": "document_end"
+			"resources": ["inject-script.js", "content.js"],
+			"matches": ["<all_urls>"]
 		}
 	],
 	"options_ui": {
