--- a/source/manifest.json
+++ b/source/manifest.json
@@ -1,7 +1,7 @@
 {
-	"name": "My Awesome Extension",
+	"name": "BionicBolder",
 	"version": "1.0.0",
-	"description": "An awesome new browser extension",
+	"description": "Revolutionize your reading experience with BionicBolder, a powerful extension that leverages the bionic reading method to selectively bold parts of words, boosting focus and comprehension on any source, including medium.com, Github's readmes and tech documentations like Laravel, Vue, Python, Go, and more. Say goodbye to the struggle of reading docs and embrace a whole new level of focus and productivity!",
 	"homepage_url": "https://github.com/fregante/browser-extension-template",
 	"manifest_version": 3,
 	"minimum_chrome_version": "100",
@@ -23,10 +23,14 @@
 	"action": {
 		"default_icon": {
 			"128": "icon.png"
-		}
+		},
+		"default_popup": "popup.html"
 	},
 	"content_scripts": [
-		
+		{
+			"matches": ["<all_urls>"],
+			"js": ["content.js"]
+		}
 	],
 	"web_accessible_resources": [
 		{
